# Openfabric_GenImages

./: README.md  setup.sh
.gradio/flagged/: dataset1.csv
app/: ignite.py  main.py  pyproject.toml  requirements.txt  run_gradio.py  start.sh
app/assets/: model_viewer_template.html  modelviewer-template.html
app/core/: db_manager.py  llm_interface.py  openfabric_wrapper.py  remote.py  stub.py
app/datastore/: generations.db  tokens.json
app/gradio_cache/1746166803.002893/: viewer.html
app/gradio_cache/1746167347.903335/: viewer.html
app/gradio_cache/1746167975.8278039/: viewer.html
app/gradio_cache/1746168083.294282/: viewer.html
app/gradio_cache/1746168340.639548/: viewer.html
app/gradio_cache/1746168951.0766337/: viewer.html
app/gradio_cache/1746169582.1527157/: viewer.html
app/gradio_cache/1746169778.563453/: viewer.html
app/gradio_cache/1746169918.3768086/: viewer.html
app/gradio_cache/1746170115.395908/: viewer.html
app/gradio_cache/1746170452.2000172/: viewer.html
app/gradio_cache/1746170725.4101272/: viewer.html
app/gradio_cache/1746171633.2430747/: viewer.html
app/gradio_cache/1746172494.507966/: model_1.glb  viewer.html
app/gradio_cache/1746172837.07102/: viewer.html
app/gradio_cache/1746172928.1217034/: viewer.html
app/gradio_cache/1746173737.8742378/: viewer.html
app/gradio_cache/1746175680.286217/: viewer.html
app/gradio_cache/1746175869.3671696/: viewer.html
app/ontology_dc8f06af066e4a7880a5938933236037/: input.py  output.py
app/utils/: cleanup.py
datastore/: tokens.json
